WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117159
[BlackBerry] ROI details are not always cleared when using back navigation.
https://bugs.webkit.org/show_bug.cgi?id=117159
Summary
[BlackBerry] ROI details are not always cleared when using back navigation.
Mike Fenton
Reported
2013-06-03 09:33:47 PDT
SSIA.
Attachments
Patch
(2.17 KB, patch)
2013-06-03 09:41 PDT
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2013-06-03 09:41:03 PDT
Created
attachment 203605
[details]
Patch
WebKit Commit Bot
Comment 2
2013-06-03 10:17:36 PDT
Comment on
attachment 203605
[details]
Patch Clearing flags on attachment: 203605 Committed
r151115
: <
http://trac.webkit.org/changeset/151115
>
WebKit Commit Bot
Comment 3
2013-06-03 10:17:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug