[BlackBerry] ROI details are not always cleared when using back navigation. https://bugs.webkit.org/show_bug.cgi?id=117159

Reviewed by Carlos Garcia Campos.

PR 328557.

Secondary change to ensure when restoreViewState is triggered
ROI is reset.

Internally Reviewed by Nima Ghanavatian.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::restoreViewState):


Canonical link: https://commits.webkit.org/135410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151115 268f45cc-cd09-0410-ab3c-d52691b4dbfc